T02-Terraform-resources/02-Terraform-resources-behavior/02-resource-meta-arguments/05-previsioners-connections/01-file-provisioner/security-group.tf
resource "aws_security_group" "vpc-ssh-web" {
  name        = "ec2-ssh-web-${terraform.workspace}" //"EC2-ssh-web"
  description = "Allow ssh and web inbound traffic"

  ingress = [
    {
      description      = "SSH from VPC"
      from_port        = 22
      to_port          = 22
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
    },
    {
      description      = "web from VPC"
      from_port        = 80
      to_port          = 80
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
    }
  ]


  egress = [
    {
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
    }
  ]

  tags = {
    Name = "EC2-ssh-web-${terraform.workspace}"
  }
}
